external-crates/move/crates/move-compiler/tests/move_2024/expansion/macro_identifier_missing.move
module a::m {
    macro fun foo<T>(x: u64, f: |u64|) {
        f(x)
    }
}
